# Pc-club-simulator

./: CMakeLists.txt  README.md
src/: Main.cpp  client.cpp  client.h  club.cpp  club.h  event.cpp  event.h  parser.cpp  parser.h  table.cpp  table.h  utils.cpp  utils.h
tests/: tests.cpp
